# Translat

./: .gitattributes  .gitignore  AGENTS.md  LICENSE  README.md  biome.json  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/migrations/: 0001_initial_schema.sql  0002_projects.sql  0003_documents.sql  0004_segments.sql  0005_document_sections.sql  0006_glossaries.sql  0007_glossary_entries.sql  0008_style_profiles.sql  0009_rule_sets.sql  0010_project_editorial_defaults.sql  0011_translation_chunks.sql  0012_operational_persistence.sql  0013_rule_action_scopes.sql  0014_segment_translation_projection.sql
src-tauri/src/: chapter_contexts.rs  context_builder.rs  document_export.rs  document_qa.rs  documents.rs  error.rs  finding_review.rs  glossaries.rs  glossary_entries.rs  main.rs  observability.rs  performance_tests.rs  projects.rs  qa_findings.rs  reconstructed_documents.rs  rule_sets.rs  sections.rs  segments.rs  smoke_tests.rs  style_profiles.rs  task_runs.rs  translate_chunk.rs  translate_document.rs  translation_chunks.rs
src-tauri/src/commands/: context_builder.rs  document_export.rs  document_qa.rs  documents.rs  finding_review.rs  glossaries.rs  glossary_entries.rs  healthcheck.rs  mod.rs  observability.rs  projects.rs  reconstructed_documents.rs  rule_sets.rs  segments.rs  style_profiles.rs  translate_chunk.rs  translate_document.rs  translate_document_jobs.rs  translation_chunks.rs
src-tauri/src/persistence/: bootstrap.rs  documents.rs  (+15 more)
(+97 files in other folders)
