[package]
name = "translat-desktop"
version = "0.1.0"
description = "Desktop shell foundation for Translat."
authors = ["Ernesto"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2.5.6", features = [] }

[dependencies]
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "2.10.3", features = [] }
